@@ -12,9 +12,9 @@ import uk.gov.hmcts.reform.pcs.ccd.entity.GenAppEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
 import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.ApplicationsTaskGroupEvaluator;
 import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.ClaimTaskGroupEvaluator;
-import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.ResponseTaskGroupEvaluator;
 import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.HearingsTaskGroupEvaluator;
 import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.NoticesTaskGroupEvaluator;
+import uk.gov.hmcts.reform.pcs.ccd.service.dashboard.task.ResponseTaskGroupEvaluator;
 import uk.gov.hmcts.reform.pcs.ccd.util.ListValueUtils;
 
 import java.util.List;
@@ -33,7 +33,7 @@ class DashboardJourneyServiceTest {
         underTest = new DashboardJourneyService(List.of(
             new ClaimTaskGroupEvaluator(),
             new ResponseTaskGroupEvaluator(),
-            new ApplicationsTaskGroupEvaluator()
+            new ApplicationsTaskGroupEvaluator(),
             new HearingsTaskGroupEvaluator(),
             new NoticesTaskGroupEvaluator()
         ));
@@ -49,7 +49,7 @@ class DashboardJourneyServiceTest {
         assertThat(result.getCaseId()).isEqualTo(String.valueOf(CASE_REFERENCE));
         assertThat(result.getPropertyAddress()).isEqualTo(propertyAddress);
         assertThat(result.getNotifications()).hasSize(2);
-        assertThat(result.getTaskGroups()).hasSize(4);
+        assertThat(result.getTaskGroups()).hasSize(5);
     }
 
     @Test
@@ -84,13 +84,12 @@ class DashboardJourneyServiceTest {
             .containsExactly(
                 tuple(TaskGroupId.CLAIM, 2),
                 tuple(TaskGroupId.RESPONSE, 3),
-                tuple(TaskGroupId.APPLICATIONS, 2)
                 tuple(TaskGroupId.HEARING, 1),
                 tuple(TaskGroupId.NOTICE, 1),
-                tuple(TaskGroupId.RESPONSE, 3)
+                tuple(TaskGroupId.APPLICATIONS, 2)
             );
 
-        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).getFirst().getTasks())
+        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(0).getTasks())
             .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
             .containsExactly(
                 tuple(DashboardTaskTemplateIds.VIEW_CLAIM, TaskStatus.AVAILABLE),
@@ -103,10 +102,21 @@ class DashboardJourneyServiceTest {
                 tuple(DashboardTaskTemplateIds.DEFENDANT_RESPOND_TO_CLAIM, TaskStatus.NOT_STARTED),
                 tuple(DashboardTaskTemplateIds.DEFENDANT_REVIEW_RESPONSE, TaskStatus.IN_PROGRESS),
                 tuple(DashboardTaskTemplateIds.DEFENDANT_SUBMIT_RESPONSE, TaskStatus.COMPLETED)
-                tuple("Defendant.ViewHearingDocuments", TaskStatus.AVAILABLE)
             );
 
         assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(2).getTasks())
+            .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
+            .containsExactly(
+                tuple("Defendant.ViewHearingDocuments", TaskStatus.AVAILABLE)
+            );
+
+        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(3).getTasks())
+            .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
+            .containsExactly(
+                tuple("Defendant.ViewOrdersAndNotices", TaskStatus.AVAILABLE)
+            );
+
+        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(4).getTasks())
             .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
             .containsExactly(
                 tuple(DashboardTaskTemplateIds.MAKE_GENERAL_APPLICATION, TaskStatus.AVAILABLE),
@@ -127,20 +137,11 @@ class DashboardJourneyServiceTest {
             new DashboardContext(CASE_REFERENCE, caseEntity, null)
         );
 
-        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(2).getTasks())
+        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(4).getTasks())
             .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
             .containsExactly(
                 tuple(DashboardTaskTemplateIds.MAKE_GENERAL_APPLICATION, TaskStatus.AVAILABLE),
                 tuple(DashboardTaskTemplateIds.VIEW_ALL_APPLICATIONS, TaskStatus.AVAILABLE)
-                tuple("Defendant.ViewOrdersAndNotices", TaskStatus.AVAILABLE)
-            );
-
-        assertThat(ListValueUtils.unwrapListItems(result.getTaskGroups()).get(3).getTasks())
-            .extracting(lv -> lv.getValue().getTemplateId(), lv -> lv.getValue().getStatus())
-            .containsExactly(
-                tuple("Defendant.RespondToClaim", TaskStatus.NOT_STARTED),
-                tuple("Defendant.ReviewResponse", TaskStatus.IN_PROGRESS),
-                tuple("Defendant.SubmitResponse", TaskStatus.COMPLETED)
             );
     }
 
